Fixed "To JSON" and added "To CSV".

--- a/client/index.html
+++ b/client/index.html
@@ -15,8 +15,8 @@
       <button id="submit" type="button" onclick="add_record()">Submit</button>
     </div>
 		<div class="row">
-			<button id="to_json" type="button" onclick="postTableToServerAsJson()">To JSON</button>
-			<button id="to_csv" type="button">To CSV</button>
+			<button id="to_json" type="button" onclick="getJsonFromTable()">To JSON</button>
+			<button id="to_csv" type="button" onclick="getCSVFromTable()">To CSV</button>
 			<button id="to_xml" type="button">To XML</button>
 		</div>
     <table id="chart">
