Added "To CSV".

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
 		<div class="row">
 			<button id="to_json" type="button" onclick="getJsonFromTable()">To JSON</button>
 			<button id="to_csv" type="button" onclick="getCSVFromTable()">To CSV</button>
-			<button id="to_xml" type="button">To XML</button>
+			<button id="to_xml" type="button" onclick="getXMLFromTable()">To XML</button>
 		</div>
     <table id="chart">
       <thead>
